--- a/com.sap.lys/webapp/view/Launcher.view.xml
+++ b/com.sap.lys/webapp/view/Launcher.view.xml
@@ -25,10 +25,10 @@
 					</html:div>
 				
 		
-	         	    <GenericTile header="Work Queue" subheader="open issues to solve" class="tile1 tile" press="onShowThings"/>
-			        <GenericTile header="Locations" subheader="sensor overview" class="tile2 tile" press="onShowMap"/>
-			        <GenericTile header="Test" subheader="test a sensor" class="tile3 tile" press="onShowTest"/>
-			        <GenericTile header="Tutorial" subheader="getting started guide" class="tile4 tile" press="onShowHelp"/>
+	         	    <GenericTile header="Work Queue" subheader="Open issues to solve" class="tile1 tile" press="onShowThings"/>
+			        <GenericTile header="Locations"  subheader="Sensor overview" class="tile2 tile" press="onShowMap"/>
+			        <GenericTile header="Test"       subheader="Test a sensor" class="tile3 tile" press="onShowTest"/>
+			        <GenericTile header="Tutorial"   subheader="Getting started guide" class="tile4 tile" press="onShowHelp"/>
 		
 
 				</content>
